src/objects/Venue__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Show_Cost__c</fullName>
        <description>Average cost of an approved show</description>
        <inlineHelpText>Average cost of an approved show</inlineHelpText>
        <label>Avg Show Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Show_Approved__c</fullName>
        <label>Show Approved</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Show_Spend__c</fullName>
        <inlineHelpText>Aggregate spend on all approved shows at this venue.  Value is calculated by a trigger.</inlineHelpText>
        <label>Total Show Spend</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>